--- a/lessons/lesson1/task1/package.json
+++ b/lessons/lesson1/task1/package.json
@@ -1,48 +1,24 @@
 {
-  "name": "task3",
+  "name": "task1",
   "version": "1.0.0",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "build:styles": "sass ./src/styles/index.scss ./dist/styles.css",
-    "copy:html": "cp ./src/index.html ./dist/index.html",
-    "copy:scripts": "cp -R ./src/scripts ./dist/scripts",
-    "clean": "rm -rf ./dist",
-    "build:project": "npm-run-all clean build:styles copy:*",
-    "build": "webpack -p",
-    "start": "webpack-dev-server -d --devtool eval-source-map --open"
+      "test": "jest",
+      "test:watch": "jest --watch",
+      "build:styles": "sass ./src/styles/index.scss ./dist/styles.css",
+      "copy:html": "cp ./src/index.html ./dist/index.html",
+      "copy:scripts": "cp -R ./src/scripts ./dist/scripts",
+      "clean": "rm -rf ./dist",
+      "build": "npm-run-all clean build:styles copy:*"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
+  "keywords": [],
+  "description": "",
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^26.1.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.0",
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.26.9",
-    "sass-loader": "^8.0.1",
-    "style-loader": "^1.1.2",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
-  },
-  "dependencies": {
-    "core-js": "^3.6.3",
-    "moment": "^2.27.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
-  },
-  "description": ""
+      "@babel/preset-env": "^7.10.2",
+      "jest": "^26.0.1",
+      "npm-run-all": "^4.1.5",
+      "sass": "^1.26.8"
+  }
 }
