--- a/lessons/lesson2/task2/.babelrc
+++ b/lessons/lesson2/task2/.babelrc
@@ -3,7 +3,7 @@
         [
             "@babel/preset-env",
             {
-                "targets": ">3%"
+                "targets": ">1%, last 2 versions, >1%"
             }
         ]
     ]
