--- a/lessons/lesson3/task2/package.json
+++ b/lessons/lesson3/task2/package.json
@@ -8,17 +8,22 @@
     "test:watch": "jest --watch",
     "build:styles": "sass ./src/styles/index.scss ./dist/styles.css",
     "copy:html": "cp ./src/index.html ./dist/index.html",
-    "copy:scripts": "cp -R ./src/scripts ./dist/scripts",
+    "build:scripts": "babel ./src --out-dir=./dist",
     "clean": "rm -rf ./dist",
-    "build": "npm-run-all clean build:styles copy:*"
+    "build": "npm-run-all clean build:* copy:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "jest": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.26.9"
+  },
+  "dependencies": {
+    "core-js": "^3.6.5"
   }
 }
