--- a/lessons/lesson4/task2/package.json
+++ b/lessons/lesson4/task2/package.json
@@ -1,7 +1,6 @@
 {
   "name": "task2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +16,6 @@
     "core-js": "^3.6.5",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
-  }
+  },
+  "description": ""
 }
